# udemy-mnist-app

./: .tool-versions  README.md
python-web-app/: index.html  main.py  model.onnx  pyproject.toml
python-web-app/static/: main.js
static-site/: index.html
static-site/static/: main.js  style.css
train/: predict.py  pyproject.toml  show_data.py  train.py
